--- a/task1/src/Makefile
+++ b/task1/src/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS= -Werror -Wall -Wextra -pedantic-errors
 CSSEFLAGS= -msse3 -D USE_SSE
 TARGET=fir
-SRC= filter.c main.c
+SRC= filter.c test.c main.c
 
 without_sse:
 	$(CC) $(SRC) -o $(TARGET) $(CFLAGS)
